<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add_my_symptoms">Add my symptoms</string>
    <string name="app_name">NHS COVID-19</string>
    <string name="app_rationale">This app can let you know if you may have been near someone with coronavirus symptoms (COVID-19).</string>
    <string name="app_title">COVID-19</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="area_not_supported_message">This app is currently being evaluated on the Isle of Wight. It is not yet intended for use elsewhere. We are working to bring full functionality across the UK</string>
    <string name="area_not_supported_title">Your area is not supported yet</string>
    <string name="back">Back</string>
    <string name="bluetooth_battery_body">This app uses low energy Bluetooth which will have minimal effect on your battery life.</string>
    <string name="bluetooth_battery_title">Will Bluetooth affect my phone’s battery life?</string>
    <string name="bluetooth_permission">• <b>Bluetooth</b>", to record when your device is near others using this app "</string>
    <string name="bluetooth_rationale">This app uses battery-saving Bluetooth Low Energy to determine when it is near another phone with this app. For this app to work, Bluetooth needs to be kept on at all times.</string>
    <string name="bluetooth_rationale_title">Bluetooth</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_answers">Check your answers</string>
    <string name="check_my_symptoms">Check my symptoms</string>
    <string name="checkin_notification_action">Open App</string>
    <string name="checkin_notification_text">Please open the app to update your symptoms and view your latest advice. Your help saves lives.</string>
    <string name="checkin_notification_title">How are you feeling today?</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">Close</string>
    <string name="com.crashlytics.android.build_id">00000000000000000000000000000000</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm_diagnosis_text_1">This information will be used to help decide if the people you have had contact with will be advised to stay at home. To avoid more social distancing restrictions, the NHS needs accurate data on the number of people with symptoms.</string>
    <string name="confirm_diagnosis_text_2">Together we can help save lives, protect the NHS and stop the spread of coronavirus in the UK.</string>
    <string name="continue_button">Continue</string>
    <string name="continuous_cough">Continuous cough</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="cough_description">Continuous: means coughing a lot for more than an hour, or 3 or more coughing episodes in 24 hours.</string>
    <string name="cough_description_new">"New: means a cough that you've not had before, or if you usually have a cough, it's got worse."</string>
    <string name="cough_question">Do you have a new continuous cough?</string>
    <string name="cough_question_simplified">Do you still have a continuous cough?</string>
    <string name="date_selection_error">Select the date from the dropdown</string>
    <string name="default_notification_channel_id">colocate-locate</string>
    <string name="default_web_client_id">134537334347-48gpc7gkav6i8lfndnbj3ffv4msmraru.apps.googleusercontent.com</string>
    <string name="device_not_supported_rationale">Your device is not supported. This could be for various reasons.</string>
    <string name="device_not_supported_title">Sorry, this app will not work on your phone</string>
    <string name="diagnosed">Have you been diagnosed with coronavirus?</string>
    <string name="diagnosis_review_description">"Thank you for sharing this data with the NHS. We will use this information to anonymously inform people they have come into contact with covid symptoms and encourage them to self-isolate.
Thank you for helping us save lives"</string>
    <string name="diagnosis_review_title">Thank you for sharing this data with the NHS.</string>
    <string name="enable_bluetooth">Enable Bluetooth</string>
    <string name="enable_bluetooth_rationale">"This app uses battery-saving Bluetooth Low Energy to determine when it is near another phone with this app installed. For this to work, Bluetooth needs to be kept on at all times. 

Using Bluetooth means that the app cannot track your location and your privacy remains protected.

If you do not give permission for Bluetooth this app will not work.

To give permission for this app to access Bluetooth, please go to Settings and allow access"</string>
    <string name="enable_bluetooth_title">Your permission is needed to allow the use of Bluetooth</string>
    <string name="enable_permissions">Enable permissions</string>
    <string name="i_do_cough">I have a new continuous cough</string>
    <string name="i_do_not_temperature">"I don't have a high temperature"</string>
    <string name="if_showing_other_symptoms">If you are showing other symptoms, or think you may have coronavirus, please visit</string>
    <string name="important_instructions_for_medical_workers">Important instructions for healthcare workers</string>
    <string name="isle_of_white_only_description">If you live elsewhere in the UK, please keep the app installed and we will let you know when it is ready for you to use.</string>
    <string name="isle_of_white_only_title">This app currently only works on the Isle of Wight</string>
    <string name="loading">Loading…</string>
    <string name="location_rationale">You will not be tracked and your personal identity and location history will remain protected at all times. On an Android phone, your location permission is needed for Bluetooth to work.</string>
    <string name="medical_workers_instructions_text">Your interactions at work should not be captured when you are wearing personal protective equipment.</string>
    <string name="medical_workers_instructions_title">Turn off your Bluetooth when you put on your PPE</string>
    <string name="need_medical_advice">If you need urgent medical advice about your coronavirus symptoms, visit</string>
    <string name="nhs_111_online_service"><u>NHS 111 online coronavirus service</u></string>
    <string name="nhs_online_service"><u>NHS Coronavirus</u></string>
    <string name="no_cough">No, I don’t have a new continuous cough</string>
    <string name="okay">Okay</string>
    <string name="page_3_of_3">Page 3 of 3</string>
    <string name="permission_rationale_title">Location</string>
    <string name="permission_title">Set up app permissions</string>
    <string name="progress_three_thirds">3/3</string>
    <string name="progress_two_out_of_two">2/2</string>
    <string name="radio_button_cough_error">Select yes if you have a continuous cough</string>
    <string name="recovery_dialog_description">Although you still have a continuous cough, you no longer need to self-isolate and can begin following general advice.</string>
    <string name="recovery_dialog_title">Start following general advice</string>
    <string name="reference_code">Reference code</string>
    <string name="status_description_02">Feel free to use other apps as normal and you’ll be notified if your advice changes.</string>
    <string name="status_description_03">If you develop symptoms, please come back to this app.</string>
    <string name="submit">Submit</string>
    <string name="symptoms_date_prompt_cough">When did your cough start?</string>
    <string name="yes_cough">Yes, I have a new continuous cough</string>
    <string name="you_do_not_have_symptoms">You do not appear to have coronavirus symptoms</string>
</resources>