<?xml version="1.0" encoding="utf-8"?>
<merge android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/status_description_02" android:paddingHorizontal="16.0dip" style="@style/TextViewStatusSubTittle" />
    <TextView android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/status_description_03" android:paddingHorizontal="16.0dip" style="@style/TextViewStatusSubTittle" />
    <TextView android:textSize="16.0sp" android:id="@id/need_medical_advice" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/need_medical_advice" android:paddingHorizontal="16.0dip" android:accessibilityHeading="true" style="@style/TextViewActionSubTitle" />
    <TextView android:id="@id/nhs_service" android:paddingLeft="16.0dip" android:paddingTop="8.0dip" android:paddingRight="16.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nhs_online_service" android:paddingHorizontal="16.0dip" android:paddingVertical="8.0dip" style="@style/TextViewLink02" />
    <com.google.android.material.card.MaterialCardView android:id="@id/medical_workers_card" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:accessibilityHeading="true" style="@style/PrimaryCard">
        <TextView android:id="@id/medicalWorkersInstructions" android:paddingLeft="16.0dip" android:paddingTop="16.0dip" android:paddingRight="16.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/important_instructions_for_medical_workers" android:drawableEnd="@drawable/ic_keyboard_arrow_right_24dp" android:paddingHorizontal="16.0dip" android:paddingVertical="16.0dip" style="@style/TextViewActionTitle" />
    </com.google.android.material.card.MaterialCardView>
</merge>