<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/bottom_sheet_recovery" android:background="@drawable/bottom_sheet_rounded_background" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingHorizontal="16.0dip" app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/recovery_dialog_title" android:accessibilityHeading="true" style="@style/BottomSheetTitle" />
    <TextView android:textSize="16.0sp" android:textColor="@color/text_sub_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/recovery_dialog_description" android:textAlignment="textStart" />
    <Button android:id="@id/ok" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:layout_marginBottom="24.0dip" android:text="@string/okay" style="@style/SecondaryButton" />
</LinearLayout>