<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:id="@id/activity_isolate" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatImageView android:id="@id/nhsLogo" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:src="@drawable/nhs_logo" android:scaleType="center" android:baselineAlignBottom="true" android:contentDescription="@null" android:layout_marginStart="16.0dip" android:paddingVertical="4.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="20.0sp" android:textColor="?colorAccent" android:id="@id/name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="0.0dip" android:text="@string/app_title" android:layout_marginStart="8.0dip" app:layout_constraintBottom_toBottomOf="@id/nhsLogo" app:layout_constraintStart_toEndOf="@id/nhsLogo" />
    <ScrollView android:id="@id/scrollView" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginTop="56.0dip" android:layout_marginBottom="16.0dip" app:layout_constraintBottom_toTopOf="@id/permission_continue" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <LinearLayout android:orientation="vertical" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingHorizontal="16.0dip">
            <androidx.appcompat.widget.AppCompatImageView android:layout_gravity="bottom|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_onboarding_permissions" android:contentDescription="@null" />
            <TextView android:id="@id/permission_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="24.0dip" android:text="@string/permission_title" android:accessibilityHeading="true" style="@style/OnboardingTitle" />
            <LinearLayout android:id="@id/bluetooth_rationale" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <View style="@style/Divider.Vertical" />
                <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bluetooth_rationale_title" android:lineSpacingMultiplier="1.2" android:paddingStart="12.0dip" android:paddingEnd="12.0dip" android:accessibilityHeading="true" />
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bluetooth_rationale" android:lineSpacingMultiplier="1.2" android:paddingStart="12.0dip" android:paddingEnd="12.0dip" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:id="@id/location_rationale" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="32.0dip">
                <View style="@style/Divider.Vertical" />
                <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/permission_rationale_title" android:lineSpacingMultiplier="1.2" android:paddingStart="12.0dip" android:paddingEnd="12.0dip" android:accessibilityHeading="true" />
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/location_rationale" android:lineSpacingMultiplier="1.2" android:paddingStart="12.0dip" android:paddingEnd="12.0dip" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <androidx.appcompat.widget.AppCompatButton android:textSize="16.0sp" android:id="@id/permission_continue" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="32.0dip" android:minHeight="54.0dip" android:text="@string/enable_permissions" android:layout_alignParentBottom="true" android:layout_marginHorizontal="16.0dip" app:layout_constraintBottom_toBottomOf="parent" style="@style/PrimaryButton" />
</androidx.constraintlayout.widget.ConstraintLayout>